defluff and deemphasize specific cpu support

--- a/rfcs/0037-x86_32.md
+++ b/rfcs/0037-x86_32.md
@@ -9,28 +9,25 @@ related-issues: 52634
 # Summary
 [summary]: #summary
 
-Expand x86 32 bit support beyond i686 to include i586, i486, and i386.  This biggest part of this change is to disambiguate usages of `i686` which is currently overloaded to mean both "32 bit x86" and "exactly the i686 architecture".  The term `x86_32` is proposed here to replace many current usages of `i686`.
+Expand x86 32 bit support to processors older than i686.  Currently `i686` in nix is overloaded to mean both "32 bit x86" and "exactly the i686 architecture".  This rfc adds the more general term `x86_32` to mean "32 bit x86" which includes the i686 but also includes i586, i486, and other variants.
 
 
 # Motivation
 [motivation]: #motivation
 
-- To support embedded x86 SoCs such as the i586 [Vortex86](https://en.wikipedia.org/wiki/Vortex86).  I personally would like to use nix on such a CPU.
-- To provide the framework for other contributers to expand support for these architectures.
+To enable the use of embedded x86 SoCs such as the i586 [Vortex86](https://en.wikipedia.org/wiki/Vortex86) with nix.  I personally would like to use nix on this CPU.
+
 
 # Detailed design
 [design]: #detailed-design
-
-The primary part that requires discussion is disambiguation of `i686`.  After that is resolved the addition of `i[345]86` support is less controversial.
 
 Introduce the predicate `isx86_32` which is symmetric to the already existing `isx86_64`.  `isx86_32` will mean "32 bit x86" and the existing `isi686` will be reinterpreted as "exactly i686 architecture".
 
 For i686 this change is effectively a low-risk no-op because `isx86_32` and `isi686` will produce the same result.  Only when the CPU is changed to `i[345]86` does the distinction begin to matter.
 
-Once the above change is agreed upon then the addition of `i[345]86` CPUs becomes straight forward.  Predicates `isi586`, `isi485`, and `isi386` will be added.  Usages of `isi686` in various packages will be flipped to `isx86_32` as needed to make them work on these CPUs.
+The `i[345]86` CPUs will now parse and may be used in system and config descriptions (example "i586-unknown-linux-gnu" and "i486-linux").  Usages of `isi686` in various packages will be flipped to `isx86_32` as needed to make them work on these CPUs.
 
-Pragmatically, I will be looking to enable i586 support on several common packages including linux kernel, libc, and openssh.  I'm not interested in i486 and i386, but it is trivial to add these CPU definitions alongside i586 should someone in future want to take a crack at it.
-
+In testing i586 cross compile support, the only changes I've had to make were general cross compile changes and disambiguation of `isi686`/`isx86_32`.  No i586-specific changes had to be made.
 
 # Drawbacks
 [drawbacks]: #drawbacks
