--- a/rfcs/0000-ipfs.md
+++ b/rfcs/0000-ipfs.md
@@ -243,18 +243,24 @@ Note at the time of writing this guide uses our original 2020 fork of Nix.
 [drawbacks]: #drawbacks
 
 The main cost is more complexity to the store layer.
-For two reason we think this is not so bad:
+For a few reason we think this is not so bad.
 
-1. Per the abstract vs concrete model of the nix store in https://github.com/NixOS/nix/pull/6877 , everything we are doing is simply flushing out alternative interpretations of the abstract model.
+Most importantly is the division of the work into a dependency graph of steps.
+This allows us to slowly try IPFS out and not commit to more change than we want to up front.
+
+Even if we do end up adopting everything though, we thing for the following two reasons the complexity can still be kept manageable:
+
+2. Per the abstract vs concrete model of the nix store in https://github.com/NixOS/nix/pull/6877 , everything we are doing is simply flushing out alternative interpretations of the abstract model.
    This is the sense in which we are "removing the weaknesses and restrictions that make additional features appear necessary" per the Scheme mantra cited above:
    Instead of extending the model wit new features, we are reflaxing concrete model assumptions (e.g. references are always opaque store paths) while keeping the abstract model the same.
 
-2. We also support plans to decouple the layers of Nix further, and update our educational and marketing material to reflect it.
+3. We also support plans to decouple the layers of Nix further, and update our educational and marketing material to reflect it.
    With Flakes and other post-2.0 features, the upper layer of Nix have gained an enormous amount of flexibility and sophistication.
    RFCs like this show that the so-far more sleepy lower layers also have plenty of potential to gain sophistication too.
 
    Embracing layering on technical, educational, communications, and managerial levels can scale our capacity to manage complexity and sophistication without the project growing out of control.
    It will "divide and conquer" the project so the interfaces between each layer are still rigorously enforced preventing a combinatorial explosion in complexity.
+   That frees up "complexity budget" for project like this.
 
    We plan on more formally proposing this next.
 
