ipfs: Fix typos
Thanks!

--- a/rfcs/0000-ipfs.md
+++ b/rfcs/0000-ipfs.md
@@ -39,7 +39,7 @@ Second of all, tarballs instead of the underlying files leaking non-normative de
 We should natively support git file hashing, which Git repos and Software Heritage both support.
 This will completely obliterate these issues.
 
-IPFS also supports git hashing, and so we also provide a good way for people and intuitions to "pin" the sources they need, especially if those sources include private ones SWH won't have.
+IPFS also supports git hashing, and so we also provide a good way for people and institutions to "pin" the sources they need, especially if those sources include private ones SWH won't have.
 Finally, per [Obsidian's bridging work](https://github.com/obsidiansystems/go-ipfs-swh-plugin),
 
 ## Not just IPFS
@@ -48,7 +48,7 @@ Many of the IPFS-specific logic could in fact live in a plugin if this is desire
 However, we still need to adjust core abstractions of Nix store layer (as described below) to interface with IPFS in the best possible way.
 Those same adjustments would allow Nix to work better with *any* content-addressing system, so alternatives networks/projects to IPFS can also be just as easily experimented with.
 
-As always with my work, the manta (from Scheme) to follow is
+As always with my work, the mantra (from Scheme) to follow is
 
 > *x* should be designed not by piling feature on top of feature, but by removing the weaknesses and restrictions that make additional features appear necessary.
 
@@ -64,7 +64,7 @@ Nix is very foreign from the "bad conventional" way things are done, and making 
 We don't want to steepen the learning curve or make it "seem more weird".
 
 On the other hand, making Nix more accessible by making it more like tools users are already use-to can obscure or chip-away at Nix's benefits.
-We don't want to "pander" in ways that will make Nix faddish but ultimately undermine it's popular over the long haul (see Docker the company's woes).
+We don't want to "pander" in ways that will make Nix faddish but ultimately undermine it's popularity over the long haul (see Docker the company's woes).
 
 One way to get around this tension to me is rather than pushing Nix towards the rest of the world, pushing the rest of the world towards us.
 Like-minded projects emphasizing content-addressing are our *natural* partners, and we should work with them to promote Nix-*agnostic* standards that further our values and mission.
@@ -227,7 +227,7 @@ At the cost of interop with existing derivation outputs, this make such data eas
 
 Natively represent derivations in IPFS, again with the same benefits of leverage the native graph representations.
 
-This is a culmination of all the futures so far.
+This is a culmination of all the features so far.
 The derivations must be CA derivations (floating or fixed).
 They must also produce wrapped git objects with references, though they can also depend on regular unwrapped git file hashed store objects.
 
@@ -248,7 +248,7 @@ For a few reason we think this is not so bad.
 Most importantly is the division of the work into a dependency graph of steps.
 This allows us to slowly try IPFS out and not commit to more change than we want to up front.
 
-Even if we do end up adopting everything though, we thing for the following two reasons the complexity can still be kept manageable:
+Even if we do end up adopting everything though, we think for the following two reasons the complexity can still be kept manageable:
 
 2. Per the abstract vs concrete model of the nix store in https://github.com/NixOS/nix/pull/6877 , everything we are doing is simply flushing out alternative interpretations of the abstract model.
    This is the sense in which we are "removing the weaknesses and restrictions that make additional features appear necessary" per the Scheme mantra cited above:
