ipfs: Fix more typos
Thanks!

--- a/rfcs/0000-ipfs.md
+++ b/rfcs/0000-ipfs.md
@@ -252,7 +252,7 @@ Even if we do end up adopting everything though, we think for the following two 
 
 2. Per the abstract vs concrete model of the nix store in https://github.com/NixOS/nix/pull/6877 , everything we are doing is simply flushing out alternative interpretations of the abstract model.
    This is the sense in which we are "removing the weaknesses and restrictions that make additional features appear necessary" per the Scheme mantra cited above:
-   Instead of extending the model wit new features, we are reflaxing concrete model assumptions (e.g. references are always opaque store paths) while keeping the abstract model the same.
+   Instead of extending the model with new features, we are relaxing concrete model assumptions (e.g. references are always opaque store paths) while keeping the abstract model the same.
 
 3. We also support plans to decouple the layers of Nix further, and update our educational and marketing material to reflect it.
    With Flakes and other post-2.0 features, the upper layer of Nix have gained an enormous amount of flexibility and sophistication.
