Apply suggestions from code review
Thanks!

Co-authored-by: Kevin Cox <kevincox@kevincox.ca>

--- a/rfcs/0133-ipfs.md
+++ b/rfcs/0133-ipfs.md
@@ -124,7 +124,7 @@ The `IpfsCid` and `IpfsEncoding` are likewise informational, describing how to g
    `chunking`, `layout`, and `max-size` are tuning parameters for unixfs [described in the UnixFS spec](https://github.com/ipfs/specs/blob/main/UNIXFS.md#importing).
 
    "UNIXFS" is not used directly because it doesn't support the "executable bit** Nix does on files.
-   NAR archive are not used directly because IPFS doesn't support arbitrary large objects.
+   NAR archive are not used directly because IPFS doesn't support arbitrarily large objects.
 
 ## IPFS Narinfo and "stateful" IPFS Store
 
@@ -177,7 +177,7 @@ And from such a content address we can always produce a store path again, so the
 
 As described in the first step, currently `NarHash` and `NarSize` are the *normative* fields which are used to verify a store object.
 But if the store object is content-addressed, we don't need these, because the content address (`CA` field) will also suffice, all by itself.
-Relax the abstract `ValidPathInfo` type to merely require that *one of* `NarHash` and `NarSize` or `CA` be defined.
+Relax the abstract `ValidPathInfo` type to merely require that *either* the pair of `NarHash` and `NarSize` or just `CA` alone be defined.
 
 Existing Nix stores types are still required to contain a `NarHash` and `NarSize`, which is good for backwards compat and don't come with a cost.
 Only new nix-agnostic store types would take advantage of these new, relaxed rules.
