--- a/rfcs/0133-ipfs.md
+++ b/rfcs/0133-ipfs.md
@@ -83,7 +83,7 @@ Each item can be done separately provided its dependent items are also done.
 
 *This is taken from [RFC PR 122](https://github.com/lucasew/rfcs/blob/binary-cache-ipfs/rfcs/0122-binary-cache-ipfs.md), which was abandoned by its author.*
 
-The purpose of this is a "hybrid" store where the narinfo metadata is still severed via HTTPS, but the data itself is served via IPFS.
+The purpose of this is a "hybrid" store where the narinfo metadata is still served via HTTPS, but the data itself is served via IPFS.
 
 Today, a narinfo looks like this:
 
@@ -121,9 +121,9 @@ The `IpfsCid` and `IpfsEncoding` are likewise informational, describing how to g
    The NAR is itself wrapped in IPFS's [UnixFS](https://github.com/ipfs/specs/blob/main/UNIXFS.md).
    This other format can be extracted from the CID (which is conceptually a pair of encoding metadata and a hash).
    For now, only IPFS's "unixfs" is supported.
-   `chunking`, `layout`, and `max-size` are tuning parameters for unixfs [described in the UnixFS spec](https://github.com/ipfs/specs/blob/main/UNIXFS.md#importing).
+   `chunking`, `layout`, and `max-width` are tuning parameters for unixfs [described in the UnixFS spec](https://github.com/ipfs/specs/blob/main/UNIXFS.md#importing).
 
-   "UNIXFS" is not used directly because it doesn't support the "executable bit** Nix does on files.
+   "UNIXFS" is not used directly because it doesn't support the "executable bit" Nix does on files.
    NAR archive are not used directly because IPFS doesn't support arbitrarily large objects.
 
 ## IPFS Narinfo and "stateful" IPFS Store
