--- a/rfcs/0133-ipfs.md
+++ b/rfcs/0133-ipfs.md
@@ -3,8 +3,8 @@ feature: ipfs
 start-date: (fill me in with today's date, YYYY-MM-DD)
 author: John Ericsion (@Ericson2314) on behalf of [Obsidian Systems](https://obsidian.systems)
 co-authors: (find a buddy later to help out with the RFC)
-shepherd-team: (names, to be nominated and accepted by RFC steering committee)
-shepherd-leader: (name to be appointed by RFC steering committee)
+shepherd-team: edolstra, kevincox, gador, @mjoseph-nixpkgs
+shepherd-leader: mjoseph-nixpkgs
 related-issues: (will contain links to implementation PRs)
 ---
 
