133: Move non-`git` steps to future work

--- a/rfcs/0133-ipfs.md
+++ b/rfcs/0133-ipfs.md
@@ -40,7 +40,7 @@ We should natively support git file hashing, which Git repos and Software Herita
 This will completely obliterate these issues.
 
 IPFS also supports git hashing, and so we also provide a good way for people and institutions to "pin" the sources they need, especially if those sources include private ones SWH won't have.
-Finally, per [Obsidian's bridging work](https://github.com/obsidiansystems/go-ipfs-swh-plugin), we have a 3 way integration between IPFS, SWH, and Nix. 
+Finally, per [Obsidian's bridging work](https://github.com/obsidiansystems/go-ipfs-swh-plugin), we have a 3 way integration between IPFS, SWH, and Nix.
 Data can be directly downloaded from SWH via HTTPS, or indirectly via IPFS, which can act as a CDN to not put as much load on SWH's servers.
 
 Overall, are building out a uniform way to work with source code, regardless of its origins or the exact tools involved.
@@ -76,6 +76,88 @@ Like-minded projects emphasizing content-addressing are our *natural* partners, 
 [design]: #detailed-design
 
 Each item can be done separately provided its dependent items are also done.
+These are the items we wish to commit to at this time.
+(See [Future Work](#future-work) for other steps left for later.)
+
+## Git file hashing
+
+- **Purpose**: Source distribution and archival
+
+In addition to the various forms of content-addressing Nix supports today ("text", "fixed" with either "flat" or "nar" serialization of file system objects), Nix should support Git hashing.
+This support entails two basic things:
+
+ - Content addresses are used to compute store paths.
+ - Content addresses are used to verify store object integrity.
+
+Git hashing would not support references (since references in Nix's sense are not a Git concept), but that is not an issue for the intended use-case of exchanging source code.
+
+## Git file hashing for `buitins.fetch*`
+
+- **Purpose**: Source distribution and archival
+- **Depends on**: Git file hashing,
+
+The builtin fetchers can also be made to work with git file hashing just as they support the other types.
+In addition, Git repo fetching can leverage this better to than the other formats since the data in git repos is already content-addressed in this way.
+
+## Content address or store path in Store interface
+
+- **Purpose**: All distribution
+
+Modify many store interface methods that today take store paths to instead accept *either* a store path or a content address.
+
+For stores that are purpose-built for Nix, like the ones we support today, all addressing can be done store paths, so the current interface is fine.
+But for Nix-agnostic stores, store paths are rather useless as a key type because Nix-agnostic tools don't know about them.
+They can, however, understand content addresses.
+And from such a content address we can always produce a store path again, so there is no loss of functionality with existing stores.
+
+# Examples and Interactions
+[examples-and-interactions]: #examples-and-interactions
+
+We encourage anyone interested to check our tutorial in https://github.com/obsidiansystems/ipfs-nix-guide/ which demonstrates the above functionality.
+Note at the time of writing this guide uses our original 2020 fork of Nix.
+
+# Drawbacks
+[drawbacks]: #drawbacks
+
+The main cost is more complexity to the store layer.
+For a few reason we think this is not so bad.
+
+Most importantly is the division of the work into a dependency graph of steps.
+This allows us to slowly try IPFS out and not commit to more change than we want to up front.
+
+Even if we do end up adopting everything though, we think for the following two reasons the complexity can still be kept manageable:
+
+2. Per the abstract vs concrete model of the nix store in https://github.com/NixOS/nix/pull/6877 , everything we are doing is simply flushing out alternative interpretations of the abstract model.
+   This is the sense in which we are "removing the weaknesses and restrictions that make additional features appear necessary" per the Scheme mantra cited above:
+   Instead of extending the model with new features, we are relaxing concrete model assumptions (e.g. references are always opaque store paths) while keeping the abstract model the same.
+
+3. We also support plans to decouple the layers of Nix further, and update our educational and marketing material to reflect it.
+   With Flakes and other post-2.0 features, the upper layer of Nix have gained an enormous amount of flexibility and sophistication.
+   RFCs like this show that the so-far more sleepy lower layers also have plenty of potential to gain sophistication too.
+
+   Embracing layering on technical, educational, communications, and managerial levels can scale our capacity to manage complexity and sophistication without the project growing out of control.
+   It will "divide and conquer" the project so the interfaces between each layer are still rigorously enforced preventing a combinatorial explosion in complexity.
+   That frees up "complexity budget" for project like this.
+
+   We plan on more formally proposing this next.
+
+# Alternatives
+[alternatives]: #alternatives
+
+The dependency graph of steps can be sliced to save some for future work.
+For now they are all written together, but during the RFC meetings we will decide which steps (if any) to ratify now, and which steps to save for later.
+
+# Unresolved questions
+[unresolved]: #unresolved-questions
+
+None at this time.
+
+# Future work
+[future]: #future-work
+
+Each item can be done separately provided its dependent items are also done.
+These are the items we do *not* wish to commit to at this time, but leave for later.
+(See [Detailed Design](#detailed-design) for other steps left for later.)
 
 ## Augmented `narinfo`
 
@@ -138,37 +220,6 @@ This allows Narinfos to reference each other and be nicely structured so the ind
 Read-only is easier, since IPFS data is immutable but "writable" stores are supported by simple printing back a new CID for the new store root after some modifications, or modifying a mutable IPNS reference.
 IPNS is historically slow, but the update is automatic.
 Printing out a new CID for the index root allows the store administrator to update an out-of-bound mutable reference, but this cannot be automated because Nix doesn't know what the out-of-band method is.
-
-## Git file hashing
-
-- **Purpose**: Source distribution and archival
-
-In addition to the various forms of content-addressing Nix supports today ("text", "fixed" with either "flat" or "nar" serialization of file system objects), Nix should support Git hashing.
-This support entails two basic things:
-
- - Content addresses are used to compute store paths.
- - Content addresses are used to verify store object integrity.
-
-Git hashing would not support references (since references in Nix's sense are not a Git concept), but that is not an issue for the intended use-case of exchanging source code.
-
-## Git file hashing for `buitins.fetch*`
-
-- **Purpose**: Source distribution and archival
-- **Depends on**: Git file hashing,
-
-The builtin fetchers can also be made to work with git file hashing just as they support the other types.
-In addition, Git repo fetching can leverage this better to than the other formats since the data in git repos is already content-addressed in this way.
-
-## Content address or store path in Store interface
-
-- **Purpose**: All distribution
-
-Modify many store interface methods that today take store paths to instead accept *either* a store path or a content address.
-
-For stores that are purpose-built for Nix, like the ones we support today, all addressing can be done store paths, so the current interface is fine.
-But for Nix-agnostic stores, store paths are rather useless as a key type because Nix-agnostic tools don't know about them.
-They can, however, understand content addresses.
-And from such a content address we can always produce a store path again, so there is no loss of functionality with existing stores.
 
 ## NAR info or content address normative in `ValidPathInfo`
 
@@ -235,50 +286,3 @@ The derivations must be CA derivations (floating or fixed).
 They must also produce wrapped git objects with references, though they can also depend on regular unwrapped git file hashed store objects.
 
 The derivations and their outputs are thus all fully IPFS native, leveraging the IPFS graph and trust vs plain old data separation for the high standard of interoperability.
-
-# Examples and Interactions
-[examples-and-interactions]: #examples-and-interactions
-
-We encourage anyone interested to check our tutorial in https://github.com/obsidiansystems/ipfs-nix-guide/ which demonstrates the above functionality.
-Note at the time of writing this guide uses our original 2020 fork of Nix.
-
-# Drawbacks
-[drawbacks]: #drawbacks
-
-The main cost is more complexity to the store layer.
-For a few reason we think this is not so bad.
-
-Most importantly is the division of the work into a dependency graph of steps.
-This allows us to slowly try IPFS out and not commit to more change than we want to up front.
-
-Even if we do end up adopting everything though, we think for the following two reasons the complexity can still be kept manageable:
-
-2. Per the abstract vs concrete model of the nix store in https://github.com/NixOS/nix/pull/6877 , everything we are doing is simply flushing out alternative interpretations of the abstract model.
-   This is the sense in which we are "removing the weaknesses and restrictions that make additional features appear necessary" per the Scheme mantra cited above:
-   Instead of extending the model with new features, we are relaxing concrete model assumptions (e.g. references are always opaque store paths) while keeping the abstract model the same.
-
-3. We also support plans to decouple the layers of Nix further, and update our educational and marketing material to reflect it.
-   With Flakes and other post-2.0 features, the upper layer of Nix have gained an enormous amount of flexibility and sophistication.
-   RFCs like this show that the so-far more sleepy lower layers also have plenty of potential to gain sophistication too.
-
-   Embracing layering on technical, educational, communications, and managerial levels can scale our capacity to manage complexity and sophistication without the project growing out of control.
-   It will "divide and conquer" the project so the interfaces between each layer are still rigorously enforced preventing a combinatorial explosion in complexity.
-   That frees up "complexity budget" for project like this.
-
-   We plan on more formally proposing this next.
-
-# Alternatives
-[alternatives]: #alternatives
-
-The dependency graph of steps can be sliced to save some for future work.
-For now they are all written together, but during the RFC meetings we will decide which steps (if any) to ratify now, and which steps to save for later.
-
-# Unresolved questions
-[unresolved]: #unresolved-questions
-
-Per the above, deciding which steps to leave as future work.
-
-# Future work
-[future]: #future-work
-
-Chiefly, any steps which we don't wish to commit to initially; to be decided as described above.
