133: Move IPFS-specific motivation to future work too

--- a/rfcs/0133-ipfs.md
+++ b/rfcs/0133-ipfs.md
@@ -11,7 +11,10 @@ related-issues: (will contain links to implementation PRs)
 # Summary
 [summary]: #summary
 
-Integrate Nix with IPFS, in phases of increasing sophistication.
+Integrate Git hashing with Nix.
+
+Nix should support content-addressed store objects using git blob + tree hashing, and Nix-unaware remote stores that serve git objects.
+
 This follows the work done and described in https://github.com/obsidiansystems/ipfs-nix-guide/ .
 
 # Motivation
@@ -24,7 +27,8 @@ This is a barrier to being a Nix user in areas of slower internet --- which incl
 This is also a barrier to users running their own caches.
 
 Content-addressing opens up a *huge* design space of solutions to get around such problems.
-IPFS explores many of those solutions.
+
+The first steps proposed below do *not* tackle this problem directly, but it lays the ground-work for future experiments in this direction.
 
 ## Source distribution and archival
 
@@ -39,23 +43,7 @@ Second of all, tarballs instead of the underlying files leaking non-normative de
 We should natively support git file hashing, which Git repos and Software Heritage both support.
 This will completely obliterate these issues.
 
-IPFS also supports git hashing, and so we also provide a good way for people and institutions to "pin" the sources they need, especially if those sources include private ones SWH won't have.
-Finally, per [Obsidian's bridging work](https://github.com/obsidiansystems/go-ipfs-swh-plugin), we have a 3 way integration between IPFS, SWH, and Nix.
-Data can be directly downloaded from SWH via HTTPS, or indirectly via IPFS, which can act as a CDN to not put as much load on SWH's servers.
-
 Overall, are building out a uniform way to work with source code, regardless of its origins or the exact tools involved.
-
-## Not just IPFS
-
-Many of the IPFS-specific logic could in fact live in a plugin if this is desired.
-However, we still need to adjust core abstractions of Nix store layer (as described below) to interface with IPFS in the best possible way.
-Those same adjustments would allow Nix to work better with *any* content-addressing system, so alternatives networks/projects to IPFS can also be just as easily experimented with.
-
-As always with my work, the mantra (from Scheme) to follow is
-
-> *x* should be designed not by piling feature on top of feature, but by removing the weaknesses and restrictions that make additional features appear necessary.
-
-A ton of misc features have been added to Nix since 2.0, and we are very careful to not increase total ad-hoc complexity more than necessary.
 
 ## Build adoption through seamless interop
 
@@ -135,7 +123,7 @@ The main cost is more complexity to the store layer.
 For a few reason we think this is not so bad.
 
 Most importantly is the division of the work into a dependency graph of steps.
-This allows us to slowly try IPFS out and not commit to more change than we want to up front.
+This allows us to slowly try out things like IPFS that leverage git hashing, and not commit to more change than we want to up front.
 
 Even if we do end up adopting everything though, we think for the following two reasons the complexity can still be kept manageable:
 
@@ -164,14 +152,41 @@ For now they are all written together, but during the RFC meetings we will decid
 
 None at this time.
 
-# Future work
+# Future work --- IPFS
 [future]: #future-work
+
+## Motivation
+
+### Binary Distribution
+
+IPFS is a potential solution leveraging content addressing for a P2P CDN.
+It out-of-the-box match's Nix's data model extremely well.
+
+### Source distribution and archival
+
+IPFS also supports git hashing, and so we also provide a good way for people and institutions to "pin" the sources they need, especially if those sources include private ones SWH won't have.
+Finally, per [Obsidian's bridging work](https://github.com/obsidiansystems/go-ipfs-swh-plugin), we have a 3 way integration between IPFS, SWH, and Nix.
+Data can be directly downloaded from SWH via HTTPS, or indirectly via IPFS, which can act as a CDN to not put as much load on SWH's servers.
+
+### Not just IPFS
+
+Many of the IPFS-specific logic could in fact live in a plugin if this is desired.
+However, we still need to adjust core abstractions of Nix store layer (as described below) to interface with IPFS in the best possible way.
+Those same adjustments would allow Nix to work better with *any* content-addressing system, so alternatives networks/projects to IPFS can also be just as easily experimented with.
+
+As always with my work, the mantra (from Scheme) to follow is
+
+> *x* should be designed not by piling feature on top of feature, but by removing the weaknesses and restrictions that make additional features appear necessary.
+
+A ton of misc features have been added to Nix since 2.0, and we are very careful to not increase total ad-hoc complexity more than necessary.
+
+## Detailed Design
 
 Each item can be done separately provided its dependent items are also done.
 These are the items we do *not* wish to commit to at this time, but leave for later.
 (See [Detailed Design](#detailed-design) for other steps left for later.)
 
-## Augmented `narinfo`
+### Augmented `narinfo`
 
 - **Purpose**: Binary distribution
 
@@ -220,7 +235,7 @@ The `IpfsCid` and `IpfsEncoding` are likewise informational, describing how to g
    "UNIXFS" is not used directly because it doesn't support the "executable bit" Nix does on files.
    NAR archive are not used directly because IPFS doesn't support arbitrarily large objects.
 
-## IPFS Narinfo and "stateful" IPFS Store
+### IPFS Narinfo and "stateful" IPFS Store
 
 - **Purpose**: Binary distribution
 - **Depends on**: Augmented `narinfo`
@@ -233,7 +248,7 @@ Read-only is easier, since IPFS data is immutable but "writable" stores are supp
 IPNS is historically slow, but the update is automatic.
 Printing out a new CID for the index root allows the store administrator to update an out-of-bound mutable reference, but this cannot be automated because Nix doesn't know what the out-of-band method is.
 
-## "stateless" IPFS store
+### "stateless" IPFS store
 
 - **Purpose**: Source distribution and archival
 - **Depends on**: NAR info or content address normative in `ValidPathInfo`
@@ -251,7 +266,7 @@ But the content address key a successful query used is enough to create a bare-b
 (A bare-bones `ValidPathInfo` might sound sub-par, but for plain old content-addressed data it is fine.
 Most of the other metadata in `ValidPathInfo` is really just for input-addressed derivation outputs, and is thus obviated by CA derivation trust maps which contain the same data but more naturally.)
 
-## Wrapped git objects with references
+### Wrapped git objects with references
 
 - **Purpose**: Binary distribution
 - **Depends on**: Git file hashing
@@ -273,7 +288,7 @@ With this form on content addressing, references are instead CIDs (native IPFS r
 This means the content addressing is "deep", such that any such content-addressed store object always has a content-addressed closure.
 At the cost of interop with existing derivation outputs, this make such data easier to manage because there are fewer trust issues and degrees of freedom in general for something to go wrong.
 
-## IPLD Derivations
+### IPLD Derivations
 
 - **Purpose**: Build plan distribution
 - **Depends on**: Wrapped git objects with references,
