133: Rename feature in light of changes

--- a/rfcs/0133-ipfs.md
+++ b/rfcs/0133-ipfs.md
@@ -1,5 +1,5 @@
 ---
-feature: ipfs
+feature: git-hashing
 start-date: (fill me in with today's date, YYYY-MM-DD)
 author: John Ericsion (@Ericson2314) on behalf of [Obsidian Systems](https://obsidian.systems)
 co-authors: (find a buddy later to help out with the RFC)
